# devbox

./: CMakeLists.txt  README.md
cmake/: GCC_FLAGS.cmake  MSVC_FLAGS.cmake  WIN_FLAGS.cmake  cppcheck.cmake  my_pkg_check_modules.cmake  toolchain_windows_32_mingw.cmake  toolchain_windows_64_mingw.cmake
lib/: CMakeLists.txt  filesystem_utils.hpp  filesystem_utils_base.hpp  glib_iterator.hpp  glib_memory.hpp  gtk_memory.hpp  hexdump.cpp  hexdump.hpp  openssl_memory.hpp  posix_memory.hpp  process.hpp  process_base.hpp  string_utils.hpp  utils.cpp  utils.hpp
lib/posix/: filesystem_utils_caja.hpp  filesystem_utils_posix.hpp  glib_iterator.hpp  process_posix.hpp  utils.cpp  utils.hpp
lib/test/: test_filesystem_base.cpp  test_hash.cpp  test_hexdump.cpp  test_iterator.cpp  test_process.cpp  test_process_windows.cpp  test_string_utils.cpp  test_utils.cpp
lib/windows/: process_windows.hpp
src/: CMakeLists.txt
src/caja-plugin/: CMakeLists.txt  details.cpp  details.hpp  implementation.cpp  menu.cpp  menu.hpp  propertypage.cpp  propertypage.hpp
src/caja-plugin/test/: test_interface.cpp
src/caja_plugin/: CMakeLists.txt  menu.cpp  propertypage.cpp  propertypage.hpp
src/caja_plugin/test/: main.cpp  test_interface.cpp
